--- a/hyprland.conf
+++ b/hyprland.conf
@@ -197,7 +197,7 @@ bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, B, exec, firefox
-bind = $mainMod, W, exec, rofi -show drun
+bind = $mainMod, W, exec, wofi -show drun
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
@@ -248,12 +248,6 @@ bind = , j, resizeactive, 0 -20
 bind = , u, resizeactive, 0 20
 bind = , escape, submap, reset
 submap = reset
-
-
-# Night mode
-
-bind = $mainMod, F10, exec, ~/.config/hypr/toggle_bluelight.sh
-
 
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
